--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.12)
 
 add_subdirectory(libs)
-add_subdirectory(test-a2)
+add_subdirectory(test-a1)
 
-if(CMM_BUILD_GUI)
+if(DH_BUILD_APP)
 add_subdirectory(app)
-endif(CMM_BUILD_GUI)
+endif(DH_BUILD_APP)
